# gitpp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.ja.md  README.md  gitpp.yaml
.github/workflows/: release.yml
docs/: overview.md  roadmap.md  spec.md
src/: git_controller.rs  interactive.rs  main.rs  setting_util.rs  tui.rs
