[package]
name = "gitpp"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.34"
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.34"
ratatui = "0.28"
crossterm = "0.28"
rustyline = "14.0"
dirs = "5.0"

[package.metadata]
rustc-version = "1.78.0"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
