[package]
name = "gitpp"
version = "0.6.4"
edition = "2021"
authors = ["kako-jun"]
license = "MIT"
description = "Git Personal Parallel Manager — manage 100+ Git repos with one command"
homepage = "https://github.com/kako-jun/gitpp"
repository = "https://github.com/kako-jun/gitpp"
documentation = "https://docs.rs/gitpp"
readme = "README.md"
keywords = ["git", "tui", "parallel", "multi-repo"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "target/"]
rust-version = "1.78.0"

[dependencies]
encoding_rs = "0.8.34"
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.34"
ratatui = "0.28"
crossterm = "0.28"
rustyline = "14.0"
dirs = "5.0"
ctrlc = "3.5.2"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
